# ode-test

./: TODO.md  pyproject.toml
benchmarks/: robertson_julia.jl
scripts/: benchmark_common.py  benchmark_rodas5_robertson.py  benchmark_vdp.py  robertson_benchmark_cache.json  vdp_benchmark_cache.json
scripts/1_tsit5_scaling/: main.py  results-NVIDIA_GeForce_RTX_4070_SUPER-divergent.csv  results-NVIDIA_GeForce_RTX_4070_SUPER-identical.csv  results.json
scripts/2_tsit5_divergence/: main.py  results-NVIDIA_GeForce_RTX_4070_SUPER.csv  results.json
scripts/3_rodas5_scaling/: main.py
scripts/4_rodas5_divergence/: main.py  results-NVIDIA_GeForce_RTX_4070_SUPER.csv  results.json
scripts/7_rodas5_custom_kernels/: main.py  results-NVIDIA_GeForce_RTX_4070_SUPER.csv
scripts/8_rodas5ck_vdp_scaling/: main.py  results-NVIDIA_GeForce_RTX_4070_SUPER.csv  results.json
solvers/: _ckn_common.py  _jax_solver_common.py  _rodas5ck_common.py  _rodas5ckn_common.py  ark.py  diffrax_kvaerno5.py  kencarp5.py  kencarp5ckn.py  kencarpgersh5.py  rodas5.py  rodas5_custom_kernel.py  rodas5_custom_kernel_v3.py  rodas5_custom_kernel_v6.py  rodas5_custom_kernel_v7_tc.py  rodas5_v2.py  rodas5_v2_linear.py  rodas5ckn.py  rodas5ckno.py  rodas5cknp.py  rodas5ckns.py  rodas5ckp.py  rodas5ckw.py  rodas5skwp.py  rosenbrock23_custom_kernel.py  scipy_bdf.py  tsit5.py  tsit5ckn.py
solvers/linear/: kencarp5_linear.py  kencarpgersh5_linear.py  rodas5_linear.py  tsit5_linear.py
tests/: test_30d.py  test_50d.py  test_70d.py  test_72d.py  test_nn_reactions.py  test_robertson.py  test_vdp.py
(+45 files in other folders)
